# SIR

./: .gitignore  README.md  pyproject.toml  requirements.txt
SIR/: create_noisy_image.py  ksvd.py  patches.py  psnr.py
